# document_generation

./: .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  graph.py  state.py
agent/final_assembler/: graph.py  tools.py
agent/prepare_chapter/: graph.py
agent/researcher/: graph.py  knowledge_base.py  md_processor.py  prompt_builder.py  researcher_prompts.py  tools.py
agent/researcher/nodes/: format_research.py  prepare.py  search_all.py
agent/reviewer/: graph.py  reviewer_prompts.py  tools.py
agent/save_chapter/: graph.py  tools.py
agent/workflow_router/: graph.py
agent/writer/: graph.py  tools.py  writer_prompts.py
data/input/: 20250525_word_template.docx  outline.json
data/knowledge_base/: additional_sources_ifrs.xlsx
notebooks/: doc_writer_skeleton.ipynb  internet_search_tool.ipynb  process_eba_ecb_sources.ipynb  process_pdfs.ipynb
utils/: __init__.py  llm_config.py  token_tracker.py
