[project]
name = "langgraph-doc-generation-agent"
version = "0.5.0"
description = "Generation of documents"
readme = "README.md"
requires-python = "==3.13.1"
dependencies = [
    "anthropic>=0.55.0",
    "ipython>=9.3.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.9",
    "numpy>=2.3.1",
    "openai>=1.91.0",
    "pandas>=2.3.0",
    "pypandoc>=1.15",
]
